成功解析makrdown 文件

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,6 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
@@ -15,10 +10,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
   },
   "include": [
-    "vite.config.ts",
-    "script"
+    "vite.config.ts"
   ]
 }
