--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rehype-prism": "^2.3.2",
+    "sass": "^1.79.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -23,12 +26,14 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "prism-themes": "^1.9.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-rehype": "^11.1.1",
     "typescript": "^5.2.2",
+    "unist-util-visit": "^5.0.0",
     "vite": "^5.0.0"
   }
 }
